--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -1,6 +1,44 @@
 /* Animações 
 **************/
 
+@keyframes rotate {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes dash {
+    0% {
+        stroke-dasharray: 1, 200;
+        stroke-dashoffset: 0;
+    }
+    50% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -35px;
+    }
+    100% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -124px;
+    }
+}
+
+@keyframes color {
+    100%,
+    0% {
+        stroke: $mfm-amarelo;
+    }
+    40% {
+        stroke: $mfm-laranja;
+    }
+    66% {
+        stroke: $mfm-magenta;
+    }
+    80%,
+    90% {
+        stroke: $mfm-roxo;
+    }
+}
+
 @keyframes tab-slide-in {
     from {
         background-position: 100% 0;
@@ -8,5 +46,109 @@
     to {
         background-image: linear-gradient(to left, transparent, transparent 50%, $mfm-laranja 50%, $mfm-amarelo);
         background-position: 0 0;
+    }
+}
+
+@keyframes equalize {
+    0% {
+        height: 100%;
+    }
+    4% {
+        height: 80%;
+    }
+    8% {
+        height: 60%;
+    }
+    12% {
+        height: 40%;
+    }
+    16% {
+        height: 10%;
+    }
+    20% {
+        height: 45%;
+    }
+    24% {
+        height: 50%;
+    }
+    28% {
+        height: 10%;
+    }
+    32% {
+        height: 60%;
+    }
+    36% {
+        height: 80%;
+    }
+    40% {
+        height: 20%;
+    }
+    44% {
+        height: 70%;
+    }
+    48% {
+        height: 10%;
+    }
+    52% {
+        height: 40%;
+    }
+    56% {
+        height: 20%;
+    }
+    60% {
+        height: 45%;
+    }
+    64% {
+        height: 100%;
+    }
+    68% {
+        height: 50%;
+    }
+    72% {
+        height: 40%;
+    }
+    76% {
+        height: 10%;
+    }
+    80% {
+        height: 100%;
+    }
+    84% {
+        height: 70%;
+    }
+    88% {
+        height: 60%;
+    }
+    92% {
+        height: 15%;
+    }
+    96% {
+        height: 100%;
+    }
+    100% {
+        height: 90%;
+    }
+}
+
+@-webkit-keyframes animatetop {
+    from {
+        top: -300px;
+        opacity: 0;
+    }
+    to {
+        top: 10;
+        z-index: 2;
+        opacity: 1;
+    }
+}
+
+@keyframes animatetop {
+    from {
+        top: -300px;
+        opacity: 0;
+    }
+    to {
+        top: 0;
+        opacity: 1;
     }
 }
