--- a/src/scss/_auxiliares.scss
+++ b/src/scss/_auxiliares.scss
@@ -42,33 +42,6 @@
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, .12), 0px 3px 1px -2px rgba(0, 0, 0, .12), 0px 1px 5px 0px rgba(0, 0, 0, .2);
 }
 
-.box-shadow-3:before,
-.box-shadow-3:after {
-    z-index: -1;
-    position: absolute;
-    content: "";
-    bottom: 15px;
-    left: 10px;
-    width: 50%;
-    top: 19%;
-    max-width: 300px;
-    background: rgba(0, 0, 0, 0.7);
-    -webkit-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7);
-    -moz-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7);
-    box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7);
-    -webkit-transform: rotate(-3deg);
-    -moz-transform: rotate(-3deg);
-    -o-transform: rotate(-3deg);
-}
-
-.box-shadow-3:after {
-    -webkit-transform: rotate(3deg);
-    -moz-transform: rotate(3deg);
-    -o-transform: rotate(3deg);
-    right: 10px;
-    left: auto;
-}
-
 .radius-3 {
     border-radius: 3px;
     -webkit-border-radius: 3px;
@@ -121,6 +94,37 @@
 
 .overflow-hide {
     overflow: hidden;
+}
+
+.loader {
+    position: relative;
+    margin: 0 auto;
+    width: 32px;
+    &:before {
+        content: '';
+        display: block;
+        padding-top: 100%;
+    }
+}
+
+.circular {
+    animation: rotate 2s linear infinite;
+    height: 100%;
+    transform-origin: center center;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+.path {
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0;
+    animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
+    stroke-linecap: round;
 }
 
 @import "utilities/spacing";
