--- a/src/scss/_pracas.scss
+++ b/src/scss/_pracas.scss
@@ -6,18 +6,42 @@
 }
 
 .praca {
-    font-family: $font-primary;
+    display: flex;
     font-size: 12px;
+    color: $mfm-cinza;
+    min-height: 24px;
+    align-content: center;
+    align-items: baseline;
+}
+
+.praca h3 {
+    font-size: 12px;
+    font-weight: normal;
+    margin-right: 5px;
+    height: 24px;
+}
+
+.praca .select {
+    display: flex;
+    cursor: pointer;
+    font-weight: 600;
     justify-self: end;
     color: $mfm-cinza;
     line-height: 20px;
 }
 
-.praca a {
+.praca .select:hover {
+    color: $mfm-roxo;
+    .mdi {
+        color: $mfm-amarelo;
+        background: $mfm-roxo;
+    }
+}
+
+.praca .select h3 {
+    font-size: 12px;
     font-weight: 600;
-    justify-self: end;
-    color: $mfm-cinza;
-    line-height: 20px;
+    margin-right: 5px;
 }
 
 .praca .mdi {
@@ -29,7 +53,330 @@
     border-radius: 6px;
 }
 
-.praca .mdi:hover {
-    color: $mfm-amarelo;
-    background: $mfm-roxo;
+
+/* Modal Pracas
+***************/
+
+.modal-pracas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1050;
+    display: none;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    outline: 0;
+    transition: opacity 0.15s linear;
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+.modal-pracas.show {
+    display: block;
+}
+
+.modal-pracas .modal-dialog {
+    display: flex;
+    position: relative;
+    width: auto;
+    margin: 0.5rem;
+    pointer-events: none;
+    flex-direction: column;
+    width: 100%;
+    pointer-events: auto;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 0.3rem;
+    outline: 0;
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s;
+    //transition: 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2), 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12);
+}
+
+.modal-pracas .modal-dialog {
+    transform: none;
+}
+
+.modal-pracas .modal-header {
+    position: relative;
+    padding: 20px;
+}
+
+.modalPracaTitle {
+    color: $mfm-roxo;
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: 500;
+    text-transform: uppercase;
+    text-align: center;
+    margin: 0;
+}
+
+.modal-pracas .modal-header .btn-close {
+    color: $mfm-cinza;
+    font-size: 32px;
+    opacity: .8;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: 7px;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.modal-pracas .modal-body {
+    overflow-y: auto;
+    position: relative;
+    flex: 1 1 auto;
+    padding: 1rem;
+}
+
+.list-group {
+    display: flex;
+    flex-direction: column;
+    padding-left: 0;
+    margin-bottom: 0;
+}
+
+.list-group-item-action {
+    width: 100%;
+    color: #495057;
+    text-align: inherit;
+}
+
+.list-group-item-action:hover,
+.list-group-item-action:focus {
+    z-index: 1;
+    color: #495057;
+    text-decoration: none;
+    background-color: #f8f9fa;
+}
+
+.list-group-item-action:active {
+    color: #212529;
+    background-color: #e9ecef;
+}
+
+.list-group-item {
+    position: relative;
+    display: block;
+    padding: 0.75rem 1.25rem;
+    background-color: #fff;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+}
+
+.list-group-item:first-child {
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
+}
+
+.list-group-item:last-child {
+    border-bottom-right-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem;
+}
+
+.list-group-item.disabled,
+.list-group-item:disabled {
+    color: #6c757d;
+    pointer-events: none;
+    background-color: #fff;
+}
+
+.list-group-item.active {
+    z-index: 2;
+    color: #fff;
+    background-color: #007bff;
+    border-color: #007bff;
+}
+
+.list-group-item+.list-group-item {
+    border-top-width: 0;
+}
+
+.list-group-item+.list-group-item.active {
+    margin-top: -1px;
+    border-top-width: 1px;
+}
+
+.list-group-horizontal {
+    flex-direction: row;
+}
+
+.list-group-horizontal .list-group-item:first-child {
+    border-bottom-left-radius: 0.25rem;
+    border-top-right-radius: 0;
+}
+
+.list-group-horizontal .list-group-item:last-child {
+    border-top-right-radius: 0.25rem;
+    border-bottom-left-radius: 0;
+}
+
+.list-group-horizontal .list-group-item.active {
+    margin-top: 0;
+}
+
+.list-group-horizontal .list-group-item+.list-group-item {
+    border-top-width: 1px;
+    border-left-width: 0;
+}
+
+.list-group-horizontal .list-group-item+.list-group-item.active {
+    margin-left: -1px;
+    border-left-width: 1px;
+}
+
+@media (min-width: 576px) {
+    .list-group-horizontal-sm {
+        flex-direction: row;
+    }
+    .list-group-horizontal-sm .list-group-item:first-child {
+        border-bottom-left-radius: 0.25rem;
+        border-top-right-radius: 0;
+    }
+    .list-group-horizontal-sm .list-group-item:last-child {
+        border-top-right-radius: 0.25rem;
+        border-bottom-left-radius: 0;
+    }
+    .list-group-horizontal-sm .list-group-item.active {
+        margin-top: 0;
+    }
+    .list-group-horizontal-sm .list-group-item+.list-group-item {
+        border-top-width: 1px;
+        border-left-width: 0;
+    }
+    .list-group-horizontal-sm .list-group-item+.list-group-item.active {
+        margin-left: -1px;
+        border-left-width: 1px;
+    }
+}
+
+@media (min-width: 768px) {
+    .list-group-horizontal-md {
+        flex-direction: row;
+    }
+    .list-group-horizontal-md .list-group-item:first-child {
+        border-bottom-left-radius: 0.25rem;
+        border-top-right-radius: 0;
+    }
+    .list-group-horizontal-md .list-group-item:last-child {
+        border-top-right-radius: 0.25rem;
+        border-bottom-left-radius: 0;
+    }
+    .list-group-horizontal-md .list-group-item.active {
+        margin-top: 0;
+    }
+    .list-group-horizontal-md .list-group-item+.list-group-item {
+        border-top-width: 1px;
+        border-left-width: 0;
+    }
+    .list-group-horizontal-md .list-group-item+.list-group-item.active {
+        margin-left: -1px;
+        border-left-width: 1px;
+    }
+}
+
+@media (min-width: 992px) {
+    .list-group-horizontal-lg {
+        flex-direction: row;
+    }
+    .list-group-horizontal-lg .list-group-item:first-child {
+        border-bottom-left-radius: 0.25rem;
+        border-top-right-radius: 0;
+    }
+    .list-group-horizontal-lg .list-group-item:last-child {
+        border-top-right-radius: 0.25rem;
+        border-bottom-left-radius: 0;
+    }
+    .list-group-horizontal-lg .list-group-item.active {
+        margin-top: 0;
+    }
+    .list-group-horizontal-lg .list-group-item+.list-group-item {
+        border-top-width: 1px;
+        border-left-width: 0;
+    }
+    .list-group-horizontal-lg .list-group-item+.list-group-item.active {
+        margin-left: -1px;
+        border-left-width: 1px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .list-group-horizontal-xl {
+        flex-direction: row;
+    }
+    .list-group-horizontal-xl .list-group-item:first-child {
+        border-bottom-left-radius: 0.25rem;
+        border-top-right-radius: 0;
+    }
+    .list-group-horizontal-xl .list-group-item:last-child {
+        border-top-right-radius: 0.25rem;
+        border-bottom-left-radius: 0;
+    }
+    .list-group-horizontal-xl .list-group-item.active {
+        margin-top: 0;
+    }
+    .list-group-horizontal-xl .list-group-item+.list-group-item {
+        border-top-width: 1px;
+        border-left-width: 0;
+    }
+    .list-group-horizontal-xl .list-group-item+.list-group-item.active {
+        margin-left: -1px;
+        border-left-width: 1px;
+    }
+}
+
+.listaOption {
+    background: #FFF;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    padding: 15px 5px;
+    margin: 0;
+}
+
+.listaOption a {
+    color: $mfm-roxo;
+    font-size: 14px;
+    text-decoration: none;
+}
+
+.listaOption a span.cidade {
+    display: block;
+    line-height: 42px;
+    margin-right: 10px;
+    float: left;
+}
+
+.listaOption a img {
+    float: right;
+}
+
+@media (min-width: 576px) {
+    .modal-pracas .modal-dialog {
+        max-height: calc(100% - 3.5rem);
+        max-width: 500px;
+        margin: 1.75rem auto;
+    }
 }
