--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,6 +7,7 @@ $mfm-cinza-escuro: #333333;
 $mfm-cinza-claro: #E6E6E6;
 $white:#ffffff;
 $black:#000000;
+$test:#0076ff;
 $twitter-color: #4099ff;
 $facebook-color: #3B5998;
 $youtube-color: #ff0000;
