--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,6 +18,7 @@
 @import "pecamusica";
 @import "rodape";
 @import "player";
+@import "posts";
 //auxiliares
 @import "auxiliares";
 @import "background";
