--- a/src/css/style.css
+++ b/src/css/style.css
@@ -211,6 +211,10 @@ img {
   border: none; }
 
 /* Gerais */
+.turbolinks-progress-bar {
+  height: 3px;
+  background: #6318af linear-gradient(to right, #6318af, #b50091) repeat-x; }
+
 .content {
   width: 90%;
   max-width: 1200px;
@@ -334,11 +338,19 @@ header {
   transform: translate(0, 50%); }
 
 .btn-card {
-  color: #fff203;
-  font-size: 12px;
+  display: flex;
+  background-image: linear-gradient(to right, #6318af, #b50091);
+  justify-items: center;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  width: 200px;
+  height: 40px;
+  color: #ffffff;
+  font-size: 16px;
   font-weight: 900;
   padding: 5px 10px;
-  border-radius: 15px;
+  border-radius: 20px;
   -webkit-transition: all .3s ease-in-out;
   -moz-transition: all .3s ease-in-out;
   -ms-transition: all .3s ease-in-out;
@@ -346,11 +358,7 @@ header {
   transition: all .3s ease-in-out; }
 
 .btn-card:hover {
-  -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.5), 0px 3px 1px -2px rgba(0, 0, 0, 0.5), 0px 1px 5px 0px rgba(0, 0, 0, 0.4);
-  -moz-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.5), 0px 3px 1px -2px rgba(0, 0, 0, 0.5), 0px 1px 5px 0px rgba(0, 0, 0, 0.4);
-  -ms-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.5), 0px 3px 1px -2px rgba(0, 0, 0, 0.5), 0px 1px 5px 0px rgba(0, 0, 0, 0.4);
-  -o-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.5), 0px 3px 1px -2px rgba(0, 0, 0, 0.5), 0px 1px 5px 0px rgba(0, 0, 0, 0.4);
-  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.5), 0px 3px 1px -2px rgba(0, 0, 0, 0.5), 0px 1px 5px 0px rgba(0, 0, 0, 0.4);
+  background-image: linear-gradient(to right, #fff203, #e8b200);
   color: #ffffff; }
 
 .btn-outline {
@@ -587,15 +595,14 @@ input[type="range"]::-moz-focus-outer {
   cursor: pointer;
   display: inline-block;
   font-size: 20px;
-  height: 32px;
-  line-height: 12px;
+  height: 30px;
   position: relative;
   text-align: center;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  width: 32px; }
+  width: 30px; }
 
 /* Rodapé */
 .rodape .icon-button {
@@ -629,30 +636,30 @@ input[type="range"]::-moz-focus-outer {
   width: 0; }
 
 .icon-button:hover span {
-  width: 34px;
-  height: 34px;
+  width: 32px;
+  height: 32px;
   border-radius: 50%;
-  margin: -52%; }
+  margin: -53%; }
 
 .twitter span {
-  background-color: #4099ff; }
+  background-color: #fff203; }
 
 .facebook span {
-  background-color: #3B5998; }
+  background-color: #fff203; }
 
 .youtube span {
-  background-color: #ff0000; }
+  background-color: #fff203; }
 
 .whatsapp span {
-  background-color: #34af23; }
+  background-color: #fff203; }
 
 /* Icons */
 .icon-button i {
   background: none;
-  color: white;
-  height: 32px;
+  color: #ffffff;
+  height: 30px;
   left: 0;
-  line-height: 32px;
+  line-height: 30px;
   position: absolute;
   top: 0;
   -webkit-transition: all 0.3s;
@@ -663,7 +670,7 @@ input[type="range"]::-moz-focus-outer {
   z-index: 10; }
 
 .icon-button:hover i {
-  color: #ffffff !important; }
+  color: #b50091 !important; }
 
 /* form starting stylings ------------------------------- */
 .group {
@@ -812,28 +819,61 @@ input[type="range"]::-moz-focus-outer {
 .topo-praca {
   background: #fff203;
   width: 100%;
-  padding: 10px 0;
-  box-shadow: inset 0px -2px 10px rgba(16, 26, 50, 0.4); }
+  padding: 10px 0; }
+
+.topo-praca .content {
+  display: flex;
+  justify-content: flex-end;
+  align-content: center;
+  align-items: center; }
+
+.topo-praca .btn-player {
+  display: flex;
+  cursor: pointer;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  background: #ffffff;
+  font-size: 14px;
+  color: #606060;
+  margin: 0 20px;
+  padding: 5px 5px 5px 10px;
+  border-radius: 16px;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -ms-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out; }
+
+.topo-praca .btn-player:hover {
+  color: #6318af; }
+
+.topo-praca .btn-player span {
+  margin-left: 5px;
+  font-size: 20px; }
+
+.topo-praca .btn-player span::before {
+  display: inherit; }
 
 .praca {
   display: flex;
-  font-size: 12px;
+  font-size: 14px;
   color: #606060;
   min-height: 24px;
   align-content: center;
   align-items: baseline; }
 
 .praca h3 {
-  font-size: 12px;
+  font-size: 14px;
   font-weight: normal;
-  margin-right: 5px;
-  height: 24px; }
+  margin-right: 5px; }
 
 .praca .select {
   display: flex;
   cursor: pointer;
   font-weight: 600;
   justify-self: end;
+  align-items: center;
   color: #606060;
   line-height: 20px; }
 
@@ -844,17 +884,14 @@ input[type="range"]::-moz-focus-outer {
     background: #6318af; }
 
 .praca .select h3 {
-  font-size: 12px;
-  font-weight: 600;
+  font-size: 14px;
+  font-weight: 900;
   margin-right: 5px; }
 
 .praca .mdi {
-  display: inline-flex;
-  height: 24px;
-  width: 24px;
   font-size: 20px;
   border: 1px solid #606060;
-  border-radius: 6px; }
+  border-radius: 50%; }
 
 /* Modal Pracas
 ***************/
@@ -1126,7 +1163,7 @@ input[type="range"]::-moz-focus-outer {
   align-content: center; }
 
 .section-menu-topo .menu-topo a {
-  color: rgba(0, 0, 0, 0.5);
+  color: #606060;
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   -o-transition: all 0.3s;
@@ -1186,42 +1223,51 @@ input[type="range"]::-moz-focus-outer {
   .section-menu-topo .nav-toggle,
   .section-menu-topo .menu-topo .close {
     display: none; }
-  .menu-topo nav {
-    margin: auto; }
+  .section-menu-topo .logo img {
+    min-width: 150px; }
   .menu-topo .nav {
-    display: flex;
-    margin: 0 10px;
+    display: grid;
+    grid-template-areas: "menu social";
+    grid-template-columns: 2fr minmax(75px, 150px);
+    align-items: center;
     justify-content: space-between;
     width: 100%; }
-  .section-menu-topo .social {
-    margin: auto;
-    color: #ffffff;
-    padding: 0 5px 0 0;
-    font-size: 2.0em; }
+  .menu-topo nav {
+    grid-area: menu;
+    margin: 0px 50px; }
   .section-menu-topo .menu-topo {
     width: 100%;
     display: flex;
     align-content: center; }
   .section-menu-topo .social {
-    margin: auto;
+    grid-area: social;
+    display: flex;
+    justify-content: flex-end;
+    flex-wrap: wrap;
     color: #ffffff;
-    padding: 0 5px;
     font-size: 2.0em; }
+  .section-menu-topo .social .icon-button {
+    margin-left: 5px;
+    margin-bottom: 5px; }
   .section-menu-topo ul {
-    display: inline-flex; }
+    display: flex;
+    justify-content: space-around; }
   .section-menu-topo .menu-topo li .icon {
     display: none; }
-  .section-menu-topo .menu-topo li {
-    padding: 0 5px; }
+  .section-menu-topo .menu-topo li a {
+    padding: 5px 15px;
+    border-radius: 16px; }
+  .section-menu-topo .menu-topo .nav ul li a {
+    color: #6318af; }
+  .section-menu-topo .menu-topo li a:hover {
+    background: #fff203; }
   .section-menu-topo .menu-topo nav .menu-active {
     position: relative; }
   .section-menu-topo .menu-topo nav .menu-active::after {
     content: "";
     position: absolute;
-    bottom: -50%;
-    left: 50%;
-    transform: rotate(0deg);
-    margin-left: -5px;
+    bottom: 0;
+    left: 47%;
     border-width: 3px;
     border-style: solid;
     border-color: #6318af;
@@ -1363,8 +1409,10 @@ input[type="range"]::-moz-focus-outer {
 .promocao-item .box {
   height: 100%; }
 
-.promocoes .btn-card {
-  font-size: 12px; }
+.promocoes .box-details-info {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
 
 .section.noticias {
   padding: 20px 0;
@@ -1433,6 +1481,8 @@ input[type="range"]::-moz-focus-outer {
   white-space: normal; }
 
 .row-footer {
+  display: flex;
+  justify-content: center;
   text-align: center; }
 
 .bnt-enviar {
@@ -2311,6 +2361,52 @@ input[type="range"]::-moz-focus-outer {
   height: 100%;
   background: #6318af linear-gradient(180deg, #6318af, #b50091) repeat-x !important;
   animation-delay: -4.9s; }
+
+.section.post {
+  padding: 20px 0;
+  background-image: url("../images/BACKGROUND-cabeçalhos.png");
+  background-repeat: no-repeat;
+  background-position: top;
+  min-height: 900px;
+  overflow: hidden;
+  margin-bottom: 40px; }
+
+.section.post .content {
+  padding: 20px 0; }
+
+.post .post-header {
+  display: grid;
+  grid-template-areas: "img" "titulo" "meta";
+  justify-content: center; }
+
+.post .titulo-img {
+  display: flex;
+  grid-area: img;
+  grid-row-end: titulo;
+  justify-content: center; }
+
+.post .titulo-post {
+  display: flex;
+  grid-area: titulo;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 720px;
+  text-align: center; }
+
+.post .titulo-post h1 {
+  font-size: 36px;
+  font-weight: 900; }
+
+.post .post-meta {
+  grid-area: meta; }
+
+.post .titulo-img img {
+  margin-top: -80px; }
+
+.post .logo-section .titulo {
+  position: absolute;
+  top: 0;
+  width: 100%; }
 
 .bg-fixed {
   background-size: cover;
