--- a/src/scss/_gerais.scss
+++ b/src/scss/_gerais.scss
@@ -1,5 +1,10 @@
 /* Gerais */
 
+.turbolinks-progress-bar {
+    height: 3px;
+    background: $mfm-roxo linear-gradient(to right, $mfm-roxo, $mfm-magenta) repeat-x;
+}
+
 .content {
     width: 90%;
     max-width: 1200px;
@@ -139,11 +144,19 @@ header {
 }
 
 .btn-card {
-    color: $mfm-amarelo;
-    font-size: 12px;
+    display: flex;
+    background-image: linear-gradient(to right, $mfm-roxo, $mfm-magenta);
+    justify-items: center;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    width: 200px;
+    height: 40px;
+    color: $white;
+    font-size: 16px;
     font-weight: 900;
     padding: 5px 10px;
-    border-radius: 15px;
+    border-radius: 20px;
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
     -ms-transition: all .3s ease-in-out;
@@ -152,11 +165,7 @@ header {
 }
 
 .btn-card:hover {
-    -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, .5), 0px 3px 1px -2px rgba(0, 0, 0, .5), 0px 1px 5px 0px rgba(0, 0, 0, .4);
-    -moz-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, .5), 0px 3px 1px -2px rgba(0, 0, 0, .5), 0px 1px 5px 0px rgba(0, 0, 0, .4);
-    -ms-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, .5), 0px 3px 1px -2px rgba(0, 0, 0, .5), 0px 1px 5px 0px rgba(0, 0, 0, .4);
-    -o-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, .5), 0px 3px 1px -2px rgba(0, 0, 0, .5), 0px 1px 5px 0px rgba(0, 0, 0, .4);
-    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, .5), 0px 3px 1px -2px rgba(0, 0, 0, .5), 0px 1px 5px 0px rgba(0, 0, 0, .4);
+    background-image: linear-gradient(to right, $mfm-amarelo, $mfm-laranja);
     color: $white;
 }
 
