--- a/src/scss/_pracas.scss
+++ b/src/scss/_pracas.scss
@@ -2,12 +2,52 @@
     background: $mfm-amarelo;
     width: 100%;
     padding: 10px 0;
-    box-shadow: inset 0px -2px 10px rgba(16, 26, 50, .4);
+    //box-shadow: inset 0px -1px 10px rgba(16, 26, 50, .12);
+}
+
+.topo-praca .content {
+    display: flex;
+    justify-content: flex-end;
+    align-content: center;
+    align-items: center;
+}
+
+.topo-praca .btn-player {
+    display: flex;
+    cursor: pointer;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    background: $white;
+    font-size: 14px;
+    color: $mfm-cinza;
+    margin: 0 20px;
+    padding: 5px 5px 5px 10px;
+    border-radius: 16px;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -ms-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+}
+
+.topo-praca .btn-player:hover {
+    //background: $mfm-roxo;
+    color: $mfm-roxo;
+}
+
+.topo-praca .btn-player span {
+    margin-left: 5px;
+    font-size: 20px;
+}
+
+.topo-praca .btn-player span::before {
+    display: inherit;
 }
 
 .praca {
     display: flex;
-    font-size: 12px;
+    font-size: 14px;
     color: $mfm-cinza;
     min-height: 24px;
     align-content: center;
@@ -15,10 +55,9 @@
 }
 
 .praca h3 {
-    font-size: 12px;
+    font-size: 14px;
     font-weight: normal;
     margin-right: 5px;
-    height: 24px;
 }
 
 .praca .select {
@@ -26,6 +65,7 @@
     cursor: pointer;
     font-weight: 600;
     justify-self: end;
+    align-items: center;
     color: $mfm-cinza;
     line-height: 20px;
 }
@@ -39,18 +79,15 @@
 }
 
 .praca .select h3 {
-    font-size: 12px;
-    font-weight: 600;
+    font-size: 14px;
+    font-weight: 900;
     margin-right: 5px;
 }
 
 .praca .mdi {
-    display: inline-flex;
-    height: 24px;
-    width: 24px;
     font-size: 20px;
     border: 1px solid $mfm-cinza;
-    border-radius: 6px;
+    border-radius: 50%;
 }
 
 
