--- a/src/scss/_promocoes.scss
+++ b/src/scss/_promocoes.scss
@@ -29,6 +29,8 @@
     height: 100%;
 }
 
-.promocoes .btn-card {
-    font-size: 12px;
+.promocoes .box-details-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
