Finalizado Banner Rotativo "HOME"

--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -152,3 +152,49 @@
         opacity: 1;
     }
 }
+
+@keyframes slideLeft {
+    from {
+        transform: translate3d(100%, 0, 0);
+    }
+    to {
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+@keyframes slideRight {
+    from {
+        transform: translate3d(-100%, 0, 0);
+    }
+    to {
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+@keyframes slideInFromRight {
+    from {
+        transform: translate3d(100%, 0, 0);
+    }
+    to {
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+@keyframes slideOutToLeft {
+    to {
+        transform: translate3d(-100%, 0, 0);
+    }
+}
+
+@keyframes slideOutToRight {
+    from {
+        transform: translateX(0%);
+        // width: 100%;
+        //opacity: 0;
+    }
+    to {
+        transform: translateX(100vw);
+        // width: 100%;
+        //opacity: 1;
+    }
+}
