--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1234,7 +1234,7 @@ input[type="range"]::-moz-focus-outer {
     width: 100%; }
   .menu-topo nav {
     grid-area: menu;
-    margin: 0px 50px; }
+    margin: 0px 10px; }
   .section-menu-topo .menu-topo {
     width: 100%;
     display: flex;
@@ -1251,7 +1251,10 @@ input[type="range"]::-moz-focus-outer {
     margin-bottom: 5px; }
   .section-menu-topo ul {
     display: flex;
-    justify-content: space-around; }
+    flex-wrap: wrap;
+    justify-content: space-evenly; }
+  .section-menu-topo .menu-topo li {
+    margin: 10px 0; }
   .section-menu-topo .menu-topo li .icon {
     display: none; }
   .section-menu-topo .menu-topo li a {
@@ -1273,87 +1276,175 @@ input[type="range"]::-moz-focus-outer {
     border-color: #6318af;
     border-radius: 50%; } }
 
+/* Banner Rotativo 
+*******************/
 .banner-slide {
+  display: grid;
+  grid-template-areas: "mleft body mright";
+  grid-template-columns: auto 90% auto;
   width: 100%;
-  height: 500px;
-  position: relative;
-  overflow: hidden;
-  border-bottom: 3px solid #fff203; }
+  height: 486px;
+  position: relative; }
 
-.banner-slide .banner-background {
+.slider-content {
+  grid-area: mleft;
+  grid-column-start: mleft;
+  grid-column-end: mright;
+  width: 100%;
+  height: 100%;
+  overflow: hidden; }
+
+.slider-carrousel {
+  display: grid;
+  grid-template-areas: "lcontainer ccontainer rcontainer";
+  grid-template-columns: repeat(3, 100%);
+  width: 100%;
+  height: 100%;
+  margin-left: -100%; }
+
+.carousel-item {
+  display: none;
+  grid-area: rcontainer;
   background-size: cover;
-  background-position: center center;
+  margin-right: -100%;
+  background-position: top;
   background-color: #ffffff;
   background-repeat: no-repeat;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 500px;
-  width: 100%; }
+  height: 100%;
+  width: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-transition: transform .6s ease-in-out;
+  -o-transition: transform .6s ease-in-out;
+  transition: transform .6s ease-in-out; }
 
-.banner-slide .banner-background .banner-overlay {
-  background-color: rgba(96, 96, 96, 0.3);
+@media (prefers-reduced-motion: reduce) {
+  .carousel-item {
+    -webkit-transition: none;
+    -o-transition: none;
+    transition: none; } }
+
+.carousel-item.active,
+.carousel-item.carousel-item-next,
+.carousel-item.carousel-item-prev {
+  display: block; }
+
+.carousel-item-next.carousel-item-left,
+.carousel-item-prev.carousel-item-right,
+.carousel-item.active {
+  grid-area: ccontainer; }
+
+.active.carousel-item-left {
+  grid-area: lcontainer; }
+
+.active.carousel-item-right {
+  grid-area: rcontainer; }
+
+.carousel-item-left {
+  animation: slideLeft 1s ease-in-out; }
+
+.carousel-item-right {
+  animation: slideRight 1s ease-in-out; }
+
+.banner-slide .carousel-item .banner-overlay {
+  background-color: rgba(96, 96, 96, 0.2);
   color: #fff;
   padding: 0px 20px;
   width: 100%;
   height: 100%; }
 
-.banner-slide .banner-background .banner-overlay .banner-content {
+.banner-slide .carousel-item .banner-overlay .banner-content {
   position: relative;
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
   height: 100%; }
 
-.banner-slide .banner-background .banner-overlay .banner-content .banner-card {
-  border-left: 5px solid #fff203;
+.banner-slide .carousel-item .banner-overlay .banner-content .card-info {
+  display: none; }
+
+.banner-slide .content.banner-content {
+  display: grid;
+  grid-template-areas: "body" "footer";
+  grid-template-rows: 1fr 35px;
+  grid-area: body;
+  width: 90%;
+  max-width: 1200px;
+  align-content: center;
+  align-items: center; }
+
+.banner-slide .banner-card {
+  display: grid;
+  grid-area: body;
+  grid-row-start: body;
+  grid-row-end: footer;
+  grid-template-areas: "title" "body" "footer";
+  grid-template-rows: 1fr auto 70px;
+  align-self: center;
   background-color: #ffffff;
-  border-radius: 8px;
+  border-radius: 30px;
   z-index: 1; }
 
 .banner-card .card-title {
+  grid-area: title;
   font-family: "Filson Soft";
-  padding: 10px 10px;
+  padding: 20px 20px 10px; }
+
+.banner-card .card-title h3 {
+  line-height: 33px;
   text-align: left;
   font-weight: 900;
-  font-size: 36px;
+  font-size: 33px;
   color: #6318af; }
 
 .banner-card .card-body {
-  padding: 10px;
+  grid-area: body;
+  padding: 0 20px; }
+
+.banner-card .card-body p {
   font-family: "Open Sans";
-  font-size: 14px;
+  font-size: 16px;
+  line-height: 22px;
   text-align: left;
   color: #606060; }
 
 .banner-card .card-footer {
-  position: relative;
-  float: right;
-  padding: 10px;
+  grid-area: footer;
+  display: flex;
+  padding: 0px 20px;
   margin-bottom: 10px;
-  justify-content: right;
-  align-content: center; }
+  align-content: center;
+  align-items: center;
+  justify-content: space-between; }
 
-.banner-slide .next-slide,
-.banner-slide .prev-slide {
-  font-size: 48px;
-  color: #fff;
-  opacity: .5;
-  position: absolute;
+.banner-card .card-footer nav {
+  display: flex; }
+
+.banner-card .banner-nav {
+  display: flex;
+  text-align: center;
+  font-size: 40px;
+  height: 40px;
+  color: #6318af;
+  opacity: .8;
   z-index: 2;
-  top: calc(50% - 36px);
-  cursor: pointer; }
+  cursor: pointer;
+  border-radius: 50%; }
 
-.banner-slide .prev-slide {
-  left: 3%; }
+.banner-card .banner-nav:hover {
+  background: #fff203; }
 
-.banner-slide .next-slide {
-  right: 3%; }
+.banner-card .prev-slide {
+  text-align: right; }
+
+.banner-card .next-slide {
+  text-align: start; }
 
 .banner-slide .bullets-wrapper {
+  grid-area: footer;
+  justify-self: flex-end;
   font-size: 48px;
   color: #fff;
-  position: absolute;
   z-index: 2;
   bottom: 30px;
   right: 20%;
@@ -1367,22 +1458,32 @@ input[type="range"]::-moz-focus-outer {
   background-color: rgba(255, 255, 255, 0.2);
   cursor: pointer; }
 
+.banner-slide .bullets-wrapper .bullet-item.active {
+  background-color: #e8b200; }
+
+.slideInFromLeft {
+  animation: slideInFromLeft 1s; }
+
+.slideInFromRight {
+  animation: slideInFromRight 1s; }
+
+.slideOutToLeft {
+  animation: slideOutToLeft 1s; }
+
+.slideOutToRight {
+  animation: slideOutToRight 1s; }
+
 @media (max-width: 767.9px) {
-  .banner-slide .banner-background .banner-overlay .banner-content .banner-card {
-    position: absolute;
-    width: 75%;
-    max-height: 250px;
+  .banner-slide .banner-card {
+    max-width: 400px;
     min-width: 200px;
     left: 10%;
     bottom: 20px; } }
 
 @media (min-width: 768px) {
-  .banner-slide .banner-background .banner-overlay .banner-content .banner-card {
-    position: absolute;
-    width: 45%;
-    max-width: 420px;
-    left: 10%;
-    bottom: 20px; } }
+  .banner-slide .banner-card {
+    width: 400px;
+    height: 260px; } }
 
 .section.promocoes {
   padding: 20px 0; }
@@ -3061,6 +3162,34 @@ button.bg-mfm-cinza-claro:focus {
   to {
     top: 0;
     opacity: 1; } }
+
+@keyframes slideLeft {
+  from {
+    transform: translate3d(100%, 0, 0); }
+  to {
+    transform: translate3d(0, 0, 0); } }
+
+@keyframes slideRight {
+  from {
+    transform: translate3d(-100%, 0, 0); }
+  to {
+    transform: translate3d(0, 0, 0); } }
+
+@keyframes slideInFromRight {
+  from {
+    transform: translate3d(100%, 0, 0); }
+  to {
+    transform: translate3d(0, 0, 0); } }
+
+@keyframes slideOutToLeft {
+  to {
+    transform: translate3d(-100%, 0, 0); } }
+
+@keyframes slideOutToRight {
+  from {
+    transform: translateX(0%); }
+  to {
+    transform: translateX(100vw); } }
 
 /* MaterialDesignIcons.com */
 @font-face {
